--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,8 +20,16 @@ spring:
         time-between-eviction-runs: 10s
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+  #cache
+  cache:
+    type: redis
+    redis:
+      time-to-live: 3600000
+      key-prefix: "cache:"
+
 mybatis-plus:
   type-aliases-package: com.hmdp.entity # 别名扫描包
 logging:
   level:
     com.hmdp: debug
+
